--- a/src/test/resources/config/dev.config.properties
+++ b/src/test/resources/config/dev.config.properties
@@ -1,8 +1,8 @@
-browser = edge
+browser = chrome
 username = testautomation001@gmail.com
 password = Selenium@001
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
-headless = false
+headless = true
 incognito = false
 highlight = false
